--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   </head>
   <body>
     <div class="container main-container">
-      <h1>Mi página web</h1>
+      <h1>Bienvenidos</h1>
       <hr>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h3>El sitio esta siendo creado por el momento pero te puedes inscribir al curso de Python :)</h3>
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfNREZDMGZDFM2Sg6qPOjxkDp99F46j8RS9nMn63-m19b0hew/viewform?embedded=true" width="640" height="1650" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
     </div>
 
   </body>
