--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       <h1>Bienvenidos</h1>
       <hr>
       <h3>El sitio esta siendo creado por el momento pero te puedes inscribir al curso de Python :)</h3>
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfNREZDMGZDFM2Sg6qPOjxkDp99F46j8RS9nMn63-m19b0hew/viewform?embedded=true" width="640" height="1650" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>
+      <h2>Se lleno el cupo del curso :( pero puedes entrar a una lista secundaria para tener opciones.</h2>
+      
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScSVTZctkG3A-IB28m7AdMQ0ga3mfWLuw46LhSGmihMg4lybg/viewform?embedded=true" width="640" height="1876" frameborder="0" marginheight="0" marginwidth="0">Cargando…</iframe>  
     </div>
 
   </body>
